--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"><span class="w3-hide-small">JOACHIM</span> EIVINDSEN</span>
   </div>
-  <div class="w3-display-bottommiddle scroll-down" style="white-space:nowrap;">
-    <h5 class="w3-center w3-narrower w3-animate-opacity w3-text-white">BLI KJENT MED MEG</h5>
-    <div class="w3-center w3-padding-medium w3-animate-opacity w3-margin-bottom"><i class="fa fa-chevron-down w3-xxlarge w3-text-white"></i></div>
+  <div class="w3-display-bottommiddle scroll-down w3-opacity w3-hover-opacity-off" style="white-space:nowrap;">
+    <h5 class="w3-center w3-narrower w3-text-white">BLI KJENT MED MEG</h5>
+    <div class="w3-center w3-padding-medium w3-margin-bottom"><i class="fa fa-chevron-down w3-xxlarge w3-text-white"></i></div>
   </div>
 </div>
 
@@ -47,7 +47,7 @@
          Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
          stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige kjerneverdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og sosialisering.
          </p>
-      <p>Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du har noe du lurer på.</p>
+      <p>Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
     </div>
   </div>
 </div>
