--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>For øyeblikket studerer jeg ved NTNU avd. Trondheim, der jeg tar en bachelor i Informatikk.
             Jeg startet på graden høsten 2015 og er ferdig kommende vår. Sikter på å fortsette med en 2-årig master
              i Kunstig Intelligens eller Programvaresystemer allerede høsten 2018.
-             Gjennom utdanning har jeg tilnærmet meg ferdigheter innenfor ulike teknologier, aglie utviklingsmetoder og fått mye erfaring fra ulike gruppeprosjekter.
+             Gjennom utdanning har jeg tilnærmet meg ferdigheter innenfor ulike teknologier, agile utviklingsmetoder og fått mye erfaring fra ulike gruppeprosjekter.
              I fagene <i>Informatikk Prosjektarbeid 1</i>, <i>Programvareutvikling</i> og <i>Webutvikling</i> har jeg fått erfaring med å uvikle fulle digitale løsninger med ulike verkøy
              som Javascript, React, Angular og Node for å nevne noen.</p>
       </div>
