Changed text on smaller devices.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
       <p class="w3-margin-0"><b><i class="fa fa-user w3-margin-right"></i>JOACHIM EIVINDSEN</b></p>
       <p class="w3-margin-0"><i class="fa fa-transgender w3-margin-right"></i>Mann</p>
       <p class="w3-margin-0"><i class="fa fa-child w3-margin-right"></i>15.04.1995</p>
-      <p>Jeg er en 22 år gammel student som studerer bachelor i Informatikk. Opprinnelig kommer jeg fra Arendal.</p>
+      <p>Jeg er en 22 år gammel student som studerer bachelor i Informatikk ved NTNU i Trondheim. Opprinnelig kommer jeg fra den vakre byen Arendal på Sørlandet, der jeg bodde frem til jeg flyttet i 2014.
+         Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
+         stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige kjerneverdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og sosialisering.
+         </p>
+      <p>Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
   </div>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
