Added treehouse link

--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
   <h3 class="w3-center">OM MEG</h3>
   <p class="w3-center"><em>Webutvikler</em></p>
 
-  <!-- Hide this text on large and medium devices -->
-  <div class="w3-hide-large w3-hide-medium w3-center">
-      <p class="w3-margin-0 w3-left-align w3-margin-left"><b><i class="fa fa-user w3-margin-right"></i>JOACHIM EIVINDSEN</b></p>
-      <p class="w3-margin-0 w3-left-align w3-margin-left"><i class="fa fa-transgender w3-margin-right"></i>Mann</p>
-      <p class="w3-margin-0 w3-left-align w3-margin-left"><i class="fa fa-child w3-margin-right"></i>15.04.1995</p>
-      <p>Jeg er en 22 år gammel student som studerer bachelor i Informatikk ved NTNU i Trondheim. Opprinnelig kommer jeg fra den vakre byen Arendal på Sørlandet, der jeg bodde frem til jeg flyttet i 2014.
-         Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
-         stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige kjerneverdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og sosialisering.
-         </p>
-      <p>Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
-  </div>
+
 
   <!-- Profile Picture always displayed -->
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <img src="/img/profile-picture.jpg" class="w3-round w3-image w3-opacity-minimal" alt="Photo of Me" width="400" height="100">
+    </div>
+
+    <!-- Hide this text on large and medium devices -->
+    <div class="w3-hide-large w3-hide-medium w3-center">
+        <p class="w3-margin-0 w3-left-align w3-margin-left"><b><i class="fa fa-user w3-margin-right"></i>JOACHIM EIVINDSEN</b></p>
+        <p class="w3-margin-0 w3-left-align w3-margin-left"><i class="fa fa-transgender w3-margin-right"></i>Mann</p>
+        <p class="w3-margin-0 w3-left-align w3-margin-left"><i class="fa fa-child w3-margin-right"></i>15.04.1995</p>
+        <p class="w3-left-align">Jeg er en 22 år gammel student som studerer bachelor i Informatikk ved NTNU i Trondheim. Opprinnelig kommer jeg fra den vakre byen Arendal på Sørlandet, der jeg bodde frem til jeg flyttet i 2014.
+           Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
+           stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige kjerneverdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og sosialisering.
+           </p>
+        <p class="w3-left-align">Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
     </div>
 
     <!-- Hide this text on small devices -->
@@ -104,9 +106,9 @@
         <p class="w3-margin-0"><b><i class="fa fa-laptop w3-margin-right"></i>Warewolf</b></p>
         <p class="w3-margin-0"><i class="fa fa-wrench w3-margin-right"></i>Angular, Node, Express, MongoDB, Typescript</p>
         <p>Siden ble utviklet som en del av utdanningen i IT2810. Siden holder styr på produkter og lagerstatus for varer. Dynamisk lasting av produkter fra database og brukerautentisering er noen av funksjonene siden tilbyr. </p>
-        <button disabled class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity">
+        <a href="https://warewolf.herokuapp.com/" target="_blank"><button class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity">
           <i class="fa fa-external-link"></i> BESØK SIDEN
-        </button>
+      </button></a>
       </div>
     </div>
 
@@ -152,8 +154,8 @@
 
 <!-- Container (Kontakt Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">TA KONTAKT</h3>
-  <p class="w3-center"><em>Er det noe du lurer på? Bruk skjemaet under og ta kontakt i dag.</em></p>
+  <h3 class="w3-center">SEND MELDING</h3>
+  <p class="w3-center"><em>Er det noe du lurer på? Bruk skjemaet eller kontaktinformasjonen for å ta kontakt.</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m12 w3-panel">
@@ -188,9 +190,10 @@
         <h6 class="w3-center w3-narrower w3-text-white">GÅ TIL TOPPEN</h6>
     </div>
   <div class="w3-xxlarge w3-section w3-xwide">
-    <a href="https://www.facebook.com/joachim.eivindsen"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href="https://github.com/eideeivindsen"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a href="https://www.linkedin.com/in/joachim-eivindsen-687930154/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://www.facebook.com/joachim.eivindsen" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://github.com/eideeivindsen" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/joachim-eivindsen-687930154/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://teamtreehouse.com/joachimeivindsen" target="_blank"><img src="/img/treehouse.png" class="w3-hover-opacity" alt="Treehouse logo" width="36" height="36"></a>
   </div>
 </footer>
 
