--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="jbeIyGnIri0uCw3kefE1Mzq54FkiFrmpcShvhTKbQ_M" />
+<meta name="description" content="Portofolioside for Joachim Eivindsen. Kort presentasjon av meg selv og mine prosjekter som webutvikler.">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
