--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Joachim Eivindsen</title>
+<title>Joachim Eivindsen - Webutvikler</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="jbeIyGnIri0uCw3kefE1Mzq54FkiFrmpcShvhTKbQ_M" />
