Copyrights added to page.

--- a/index.html
+++ b/index.html
@@ -192,12 +192,13 @@
         <div class="w3-center w3-padding-medium"><i class="fa fa-chevron-up w3-xlarge w3-text-white"></i></div>
         <h6 class="w3-center w3-narrower w3-text-white">GÅ TIL TOPPEN</h6>
     </div>
-  <div class="w3-xxlarge w3-section w3-xwide">
+  <div class="w3-xxlarge w3-section w3-xwide w3-margin-bottom">
     <a href="https://www.facebook.com/joachim.eivindsen" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://github.com/eideeivindsen" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/joachim-eivindsen-687930154/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <a href="https://teamtreehouse.com/joachimeivindsen" target="_blank"><img src="/img/treehouse.png" class="w3-hover-opacity" alt="Treehouse logo" width="36" height="36"></a>
   </div>
+  <p class="w3-margin-top w3-center-bottom w3-narrower w3-text-white w3-opacity copyright"><i class="fa fa-copyright"></i></p>
 </footer>
 
 
