Added current project and changed landing page image.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-opacity-minimal"><span class="w3-hide-small">JOACHIM EIVINDSEN</span><span class="w3-hide-medium w3-hide-large">J. EIVINDSEN</span></span>
   </div>
-  <div class="w3-display-bottommiddle scroll-down w3-opacity w3-hover-opacity-off" style="white-space:nowrap;">
+  <div class="w3-display-bottommiddle scroll-down w3.opacity-minimal w3-hover-opacity-off" style="white-space:nowrap;">
     <h5 class="w3-center w3-narrower w3-text-white">BLI KJENT MED MEG</h5>
     <div class="w3-center w3-padding-medium w3-margin-bottom"><i class="fa fa-chevron-down w3-xxlarge w3-text-white"></i></div>
   </div>
@@ -37,7 +37,7 @@
   <!-- Profile Picture always displayed -->
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="/img/profile-picture.jpg" class="w3-round w3-image w3-opacity-minimal" alt="Photo of Me" width="400" height="100">
+      <img src="/img/profilbilde.jpg" class="w3-round w3-image" alt="Photo of Me" width="400" height="100">
     </div>
 
     <!-- Hide this text on large and medium devices -->
@@ -59,7 +59,7 @@
       <p class="w3-margin-0"><i class="fa fa-child w3-margin-right"></i>15.04.1995</p>
       <p>Jeg er en 22 år gammel student som studerer bachelor i Informatikk ved NTNU i Trondheim. Opprinnelig kommer jeg fra den vakre sørlandsbyen Arendal, der jeg bodde frem til jeg flyttet i 2014.
          Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
-         stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige kjerneverdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og sosialisering.
+         stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige verdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom både sosiale og fysiske aktiviteter  .
          </p>
       <p>Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
     </div>
@@ -69,15 +69,15 @@
 <!-- Container (Utdanning Section) -->
 <div class="w3-container w3-light-grey">
   <div class="w3-content w3-container w3-padding-64" id="education">
-    <h3 class="w3-center w3-opacity">UTDANNING</h3>
-    <p class="w3-center w3-opacity"><em>Informatikk - NTNU Trondheim</em></p>
+    <h3 class="w3-center w3-opacity-min">UTDANNING</h3>
+    <p class="w3-center w3-opacity-min"><em>Informatikk - NTNU Trondheim</em></p>
     <div class="w3-row">
       <div class="w3-col m5 w3-center w3-padding-32">
-        <img src="/img/university.jpg" class="w3-round w3-image w3-image-round w3-opacity-min" alt="Photo of Me" width="260" height="260">
+        <img src="/img/university.jpg" class="w3-round w3-image w3-image-round w3-opacity-min" alt="Photo of university" width="260" height="260">
       </div>
-      <div class="w3-col m7  w3-padding-large w3-opacity">
+      <div class="w3-col m7  w3-padding-large w3-opacity-min">
         <p>For øyeblikket studerer jeg ved NTNU avd. Trondheim, der jeg tar en bachelor i Informatikk.
-            Jeg startet på graden høsten 2015 og er ferdig kommende vår. Sikter på å fortsette med en 2-årig master
+            Jeg startet på graden høsten 2015 og er våren 2018. Sikter på å fortsette med en 2-årig master
              i Kunstig Intelligens eller Programvaresystemer allerede høsten 2018.
              Gjennom utdanning har jeg tilnærmet meg ferdigheter innenfor ulike teknologier, agile utviklingsmetoder og fått mye erfaring fra ulike gruppeprosjekter.
              I fagene <i>Informatikk Prosjektarbeid 1</i>, <i>Programvareutvikling</i> og <i>Webutvikling</i> har jeg fått erfaring med å uvikle fulle digitale løsninger med ulike verkøy
@@ -88,22 +88,44 @@
 </div>
 
 <!-- Second Parallax Image with Ferdigheter Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-2 w3-display-container w3-opacity-minimal">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide w3-hide-small">FERDIGHETER</span>
     <span class="w3-xlarge w3-text-white w3-wide w3-hide-large w3-hide-medium">FERDIGHETER</span>
   </div>
 </div>
 
+
+
 <!-- Container (Ferdigheter Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MINE PROSJEKTER</h3>
+
+    <h3 class="w3-center">PÅGÅENDE PROSJEKT</h3>
+    <p class="w3-center"><em>For øyeblikket jobber jeg med å utvikle ny nettside for sorfjell.no. Dette er et prosjekt med stor verdi for meg, ettersom dette er barndomsklubben min hjemmefra.
+    Jeg tok selv innitiativ for prosjektet slik at jeg kan prøve å gi noe tilbake til en klubb som har gitt så mye til meg.</em></p><br>
+
+    <!-- Section for displaying Sorfjell -->
+    <div class="w3-row">
+      <div class="w3-col m8 w3-center w3-padding-large">
+        <img src="/img/Sorfjell.png" class="w3-round w3-image w3-opacity-minimal" alt="Screenshot of project 3" width="600" height="200">
+      </div>
+      <div class="w3-col m4 w3-padding-large">
+        <p class="w3-margin-0"><b><i class="fa fa-laptop w3-margin-right"></i>Sørfjell IL</b></p>
+        <p class="w3-margin-0"><i class="fa fa-wrench w3-margin-right"></i>Wordpress, Responsive</p>
+        <p>Siden er laget for å gi en enkel og oversiktlig struktur over innhold som idretter, kontaktpersoner, lag og annen relevant informasjon. Består også av en enkel men fangende landing page, som viser verdiene Sørfjell står for.</p>
+      </button></a>
+      </div>
+    </div>
+
+    <hr></hr>
+
+  <h3 class="w3-center">TIDLIGERE PROSJEKTER</h3>
   <p class="w3-center"><em>Følgende prosjekter har blitt gjennomført det siste året.</em></p><br>
 
     <!-- Section for displaying Warewolf -->
     <div class="w3-row">
       <div class="w3-col m7 w3-center w3-padding-large">
-        <img src="/img/Warewolf.png" class="w3-round w3-image w3-opacity-min" alt="Screenshot of project 3" width="600" height="200">
+        <img src="/img/Warewolf.png" class="w3-round w3-image w3-opacity-minimal" alt="Screenshot of project 3" width="600" height="200">
       </div>
       <div class="w3-col m5 w3-padding-large">
         <p class="w3-margin-0"><b><i class="fa fa-laptop w3-margin-right"></i>Warewolf</b></p>
@@ -120,7 +142,7 @@
     <!-- Section for displaying Personal Information Manager -->
     <div class="w3-row">
         <div class="w3-col m7 w3-center w3-padding-large w3-hide-large w3-hide-medium">
-          <img src="/img/Prosjekt3.png" class="w3-round w3-image w3-opacity-min" alt="Screenshot of project 3" width="600" height="200">
+          <img src="/img/Prosjekt3.png" class="w3-round w3-image w3-opacity-minimal" alt="Screenshot of project 3" width="600" height="200">
         </div>
       <div class="w3-col m5 w3-padding-large">
         <p class="w3-margin-0"><b><i class="fa fa-laptop w3-margin-right"></i>Personal Information Manager</b></p>
@@ -131,7 +153,7 @@
       </button></a>
       </div>
       <div class="w3-col m7 w3-center w3-padding-large w3-hide-small">
-        <img src="/img/Prosjekt3.png" class="w3-round w3-image w3-opacity-min" alt="Screenshot of project 3" width="600" height="200">
+        <img src="/img/Prosjekt3.png" class="w3-round w3-image w3-opacity-minimal" alt="Screenshot of project 3" width="600" height="200">
       </div>
     </div>
 
@@ -149,7 +171,7 @@
 </div>
 
 <!-- Third Parallax Image with Kontakt Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="bgimg-3 w3-display-container w3-opacity-minimal">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">KONTAKT</span>
   </div>
@@ -170,15 +192,15 @@
       <form action="" name="contact" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half w3-padding-small">
-            <input class="w3-input w3-border" type="text" placeholder="Name" name="name" id="name" required></input>
+            <input class="w3-input w3-border" type="text" placeholder="Name" name="name" id="name" required disabled></input>
           </div>
           <div class="w3-half w3-padding-small">
-            <input class="w3-input w3-border" type="text" placeholder="Email" name="email" id="email" required></input>
+            <input class="w3-input w3-border" type="text" placeholder="Email" name="email" id="email" required disabled></input>
           </div>
         </div>
-        <textarea class="w3-input w3-border" type="text" placeholder="Message" name="message" id="message" required></textarea>
-        <label class="w3-hide" id="success-label">Meldingen din har blitt sendt!</label>
-        <button class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity" type="submit">
+        <textarea class="w3-input w3-border" type="text" placeholder="Message" name="message" id="message" required disabled></textarea>
+        <label class="w3-hide" id="form-messages">Meldingen din har blitt sendt!</label>
+        <button class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity" type="submit" disabled>
           <i class="fa fa-paper-plane"></i> SEND MELDING
         </button>
       </form>
