Linked to sorfjell.no

--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
       </div>
       <div class="w3-col m4 w3-padding-large">
         <p class="w3-margin-0"><b><i class="fa fa-laptop w3-margin-right"></i>Sørfjell IL</b></p>
-        <p class="w3-margin-0"><i class="fa fa-wrench w3-margin-right"></i>Wordpress, Responsive</p>
+        <p class="w3-margin-0"><i class="fa fa-wrench w3-margin-right"></i>Wordpress, Responsive, SQL</p>
         <p>Siden er laget for å gi en enkel og oversiktlig struktur over innhold som idretter, kontaktpersoner, lag og annen relevant informasjon. Består også av en enkel men fangende landing page, som viser verdiene Sørfjell står for.</p>
+        <a href="https://sorfjell.no/" target="_blank"><button class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity">
+          <i class="fa fa-external-link"></i> BESØK SIDEN
       </button></a>
       </div>
     </div>
