--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <!-- First Parallax Image with Name Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-minimal" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-opacity-minimal"><span class="w3-hide-small">JOACHIM EIVINDSEN</span><span class="w3-hide-medium w3-hide-large">J. EIVINDSEN</span></span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-opacity-minimal name-heading"><span class="w3-hide-small">JOACHIM EIVINDSEN</span><span class="w3-hide-medium w3-hide-large">J. EIVINDSEN</span></span>
   </div>
-  <div class="w3-display-bottommiddle scroll-down w3.opacity-minimal w3-hover-opacity-off" style="white-space:nowrap;">
-    <h5 class="w3-center w3-narrower w3-text-white">BLI KJENT MED MEG</h5>
-    <div class="w3-center w3-padding-medium w3-margin-bottom"><i class="fa fa-chevron-down w3-xxlarge w3-text-white"></i></div>
+  <div class="w3-display-bottommiddle scroll-down w3.opacity-minimal w3-hover-opacity-off scale-on-hover" style="white-space:nowrap;">
+    <h5 class="w3-center w3-narrower w3-text-white move-in-bottom">BLI KJENT MED MEG</h5>
+    <div class="w3-center w3-padding-medium w3-margin-bottom move-in-bottom"><i class="fa fa-chevron-down w3-xxlarge w3-text-white"></i></div>
   </div>
 </div>
 
@@ -45,10 +45,9 @@
         <p class="w3-margin-0 w3-left-align w3-margin-left"><b><i class="fa fa-user w3-margin-right"></i>JOACHIM EIVINDSEN</b></p>
         <p class="w3-margin-0 w3-left-align w3-margin-left"><i class="fa fa-transgender w3-margin-right"></i>Mann</p>
         <p class="w3-margin-0 w3-left-align w3-margin-left"><i class="fa fa-child w3-margin-right"></i>15.04.1995</p>
-        <p class="w3-left-align">Jeg er en 22 år gammel student som studerer bachelor i Informatikk ved NTNU i Trondheim. Opprinnelig kommer jeg fra den vakre byen Arendal på Sørlandet, der jeg bodde frem til jeg flyttet i 2014.
-           Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
-           stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige kjerneverdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og sosialisering.
-           </p>
+        <p class="w3-left-align">
+            Jeg er en 23 år gammel student som for øyeblikket tar en master i Kunstig Intelligens - Informatikk ved NTNU i Trondheim. Tidligere har jeg også fullførte en bachelorgrad i Informatikk ved NTNU sine lokaler i Trondheim. Opprinnelig kommer jeg fra Arendal, der jeg bodde frem til jeg flyttet i 2014. Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en stor interesse for både webutvikling og kunstig intelligens, og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor disse fagområdet. Familie, helse og venner er viktige verdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og samvær med andre.
+        </p>
         <p class="w3-left-align">Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
     </div>
 
@@ -57,10 +56,9 @@
       <p class="w3-margin-0"><b><i class="fa fa-user w3-margin-right"></i>JOACHIM EIVINDSEN</b></p>
       <p class="w3-margin-0"><i class="fa fa-transgender w3-margin-right"></i>Mann</p>
       <p class="w3-margin-0"><i class="fa fa-child w3-margin-right"></i>15.04.1995</p>
-      <p>Jeg er en 22 år gammel student som studerer bachelor i Informatikk ved NTNU i Trondheim. Opprinnelig kommer jeg fra den vakre sørlandsbyen Arendal, der jeg bodde frem til jeg flyttet i 2014.
-         Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en
-         stor interesse for webutvikling og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor fagområdet. Familie, helse og venner er viktige verdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom både sosiale og fysiske aktiviteter  .
-         </p>
+      <p>
+          Jeg er en 23 år gammel student som for øyeblikket tar en master i Kunstig Intelligens - Informatikk ved NTNU i Trondheim. Tidligere har jeg også fullførte en bachelorgrad i Informatikk ved NTNU sine lokaler i Trondheim. Opprinnelig kommer jeg fra Arendal, der jeg bodde frem til jeg flyttet i 2014. Som person er jeg full av energi og liker å være i aktivitet, blant annet som håndballspiller for NTNU sitt studentlag. Har gjennom de siste årene utviklet en stor interesse for både webutvikling og kunstig intelligens, og prøver konstant å tilnærme meg nye ferdigheter og kunnskap innenfor disse fagområdet. Familie, helse og venner er viktige verdier hos meg som person, og er med på å forme mine hverdagslige aktiviteter gjennom blant annet trening og samvær med andre.
+      </p>
       <p>Jeg er alltid på utkikk etter nye faglig utfordring, så ta gjerne kontakt hvis du lurer på noe.</p>
     </div>
   </div>
@@ -70,18 +68,15 @@
 <div class="w3-container w3-light-grey">
   <div class="w3-content w3-container w3-padding-64" id="education">
     <h3 class="w3-center w3-opacity-min">UTDANNING</h3>
-    <p class="w3-center w3-opacity-min"><em>Informatikk - NTNU Trondheim</em></p>
+    <p class="w3-center w3-opacity-min"><em>Kunstig Intelligens - Informatikk - NTNU Trondheim</em></p>
     <div class="w3-row">
       <div class="w3-col m5 w3-center w3-padding-32">
         <img src="/img/university.jpg" class="w3-round w3-image w3-image-round w3-opacity-min" alt="Photo of university" width="260" height="260">
       </div>
       <div class="w3-col m7  w3-padding-large w3-opacity-min">
-        <p>For øyeblikket studerer jeg ved NTNU avd. Trondheim, der jeg tar en bachelor i Informatikk.
-            Jeg startet på graden høsten 2015 og er våren 2018. Sikter på å fortsette med en 2-årig master
-             i Kunstig Intelligens eller Programvaresystemer allerede høsten 2018.
-             Gjennom utdanning har jeg tilnærmet meg ferdigheter innenfor ulike teknologier, agile utviklingsmetoder og fått mye erfaring fra ulike gruppeprosjekter.
-             I fagene <i>Informatikk Prosjektarbeid 1</i>, <i>Programvareutvikling</i> og <i>Webutvikling</i> har jeg fått erfaring med å uvikle fulle digitale løsninger med ulike verkøy
-             som Javascript, React, Angular og Node for å nevne noen.</p>
+        <p>
+            For øyeblikket studerer jeg ved NTNU avd. Trondheim, der jeg tar en master innenfor kunstig intelligens. Jeg fullførte i 2018 min bachelorgrad i Informatikk – og fortsatte på mastergrad allerede påfølgende høst. Gjennom utdanning har jeg tilnærmet meg ferdigheter innenfor ulike teknologier, agile utviklingsmetoder og fått mye erfaring fra ulike gruppeprosjekter. I fagene <i>Informatikk Prosjektarbeid 1</i>, <i>Programvareutvikling</i>, <i>Webutvikling</i>, samt en bacheloroppgave om GDPR har jeg fått erfaring med å utvikle fulle digitale løsninger med ulike verktøy som Javascript, React, Angular og Node for å nevne noen.
+        </p>
       </div>
     </div>
   </div>
@@ -101,7 +96,7 @@
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
 
     <h3 class="w3-center">PÅGÅENDE PROSJEKT</h3>
-    <p class="w3-center"><em>For øyeblikket jobber jeg med å utvikle ny nettside for sorfjell.no. Dette er et prosjekt med stor verdi for meg, ettersom dette er barndomsklubben min hjemmefra.
+    <p class="w3-center"><em>For øyeblikket jobber jeg med å utvikle ny nettside for sorfjell.no. Dette er et prosjekt med stor verdi for meg, ettersom dette er barndomsklubben min fra Arendal.
     Jeg tok selv innitiativ for prosjektet slik at jeg kan prøve å gi noe tilbake til en klubb som har gitt så mye til meg.</em></p><br>
 
     <!-- Section for displaying Sorfjell -->
@@ -112,7 +107,8 @@
       <div class="w3-col m4 w3-padding-large">
         <p class="w3-margin-0"><b><i class="fa fa-laptop w3-margin-right"></i>Sørfjell IL</b></p>
         <p class="w3-margin-0"><i class="fa fa-wrench w3-margin-right"></i>Wordpress, Responsive, SQL</p>
-        <p>Siden er laget for å gi en enkel og oversiktlig struktur over innhold som idretter, kontaktpersoner, lag og annen relevant informasjon. Består også av en enkel men fangende landing page, som viser verdiene Sørfjell står for.</p>
+        <p>Siden er laget for å gi en enkel og oversiktlig struktur over innhold som idretter, kontaktpersoner, lag og annen relevant informasjon. Består også av en enkel men fengende landingsside, som viser litt om hva Sørfjell står for.</p>
+        <p>Jeg er også webansvarlig for Sørfjell IL.</p>
         <a href="https://sorfjell.no/" target="_blank"><button class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity">
           <i class="fa fa-external-link"></i> BESØK SIDEN
       </button></a>
@@ -122,7 +118,7 @@
     <hr></hr>
 
   <h3 class="w3-center">TIDLIGERE PROSJEKTER</h3>
-  <p class="w3-center"><em>Følgende prosjekter har blitt gjennomført det siste året.</em></p><br>
+  <p class="w3-center"><em>Følgende prosjekter har blitt gjennomført det siste året. Noen av sidene hostes på gratisservere og vil derfor ta litt tid å starte opp.</em></p><br>
 
     <!-- Section for displaying Warewolf -->
     <div class="w3-row">
@@ -182,30 +178,15 @@
 <!-- Container (Kontakt Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">SEND MELDING</h3>
-  <p class="w3-center"><em>Er det noe du lurer på? Bruk skjemaet eller kontaktinformasjonen for å ta kontakt.</em></p>
+  <p class="w3-center"><em>Er det noe du lurer på? Ikke nøl med å ta kontakt for en uformell samtale i dag.</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m12 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Trondheim, Norge<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Telefon: +47 452 70 775<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Epost: joachim.eivindsen@gmail.com<br>
+        <h4><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xxlarge w3-margin-right"></i> Trondheim, Norge</h4><br>
+        <h4><i class="fa fa-phone fa-fw w3-hover-text-black w3-xxlarge w3-margin-right"></i> Telefon: +47 452 70 775</h4><br>
+        <h4><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xxlarge w3-margin-right"></i> Epost: joachim.eivindsen@gmail.com</h4><br>
       </div>
-      <form action="" name="contact" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half w3-padding-small">
-            <input class="w3-input w3-border" type="text" placeholder="Name" name="name" id="name" required disabled></input>
-          </div>
-          <div class="w3-half w3-padding-small">
-            <input class="w3-input w3-border" type="text" placeholder="Email" name="email" id="email" required disabled></input>
-          </div>
-        </div>
-        <textarea class="w3-input w3-border" type="text" placeholder="Message" name="message" id="message" required disabled></textarea>
-        <label class="w3-hide" id="form-messages">Meldingen din har blitt sendt!</label>
-        <button class="w3-button w3-khaki w3-right w3-section w3-hover-khaki w3-hover-opacity" type="submit" disabled>
-          <i class="fa fa-paper-plane"></i> SEND MELDING
-        </button>
-      </form>
     </div>
   </div>
 </div>
