New gift-picture

--- a/nikolai.html
+++ b/nikolai.html
@@ -424,7 +424,7 @@
     <g id="overlays">
       <div class="christmas-content">
         <h1>GOD JUL NIKOLAI</h1>
-        <img src="/img/christmas-picture.jpg" class="w3-round w3-image" alt="Photo of gift" width="600" height="150">
+        <img src="/img/gift.jpg" class="w3-round w3-image" alt="Photo of gift" width="600" height="150">
         <div class="text-box">
           <p>Du får en drakt av verdens beste fotballag fra verdens beste svigerbrødre</p>
         </div>
